Closed Bug 1851070 Opened 1 year ago Closed 11 months ago

[wmfme] mfpmp process still leak on Windows 10

Categories

(Core :: Audio/Video: Playback, defect, P2)

defect

Tracking

()

RESOLVED FIXED
121 Branch
Tracking Status
firefox121 --- fixed

People

(Reporter: alwu, Assigned: alwu)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Bug 1842706 fixed the mfpmp process leak for Windows 11, but it doesn't get fixed on Windows 10. Need more investigation to see what happened.


STR.

  1. Set the preferences media.eme.playready.enabled=true and media.wmf.media-engine.enabled=1
  2. Open another new tab, navigating to the https://refapp.hbbtv.org/dash/test_dashjs_sl3000.html?video=sl2000b
  3. Close the tab containing the test page

Expected.
4. Open Process Explorer and Firefox should not have any existingmfpmp process

Summary: [wmfme] mfpmp process still leak on Windows 10Bug → [wmfme] mfpmp process still leak on Windows 10

The severity field is not set for this bug.
:jimm, could you have a look please?

For more information, please visit BugBot documentation.

Flags: needinfo?(jmathies)
Severity: N/A → S3
Flags: needinfo?(jmathies)

As mfpmp process would only be used on software decryption, but software decryption (SL2000) is not our main target and we already have Widevine L3 for that. Therefore, I'm going to disable SL2000 on Windows 10.

Blocks: mfcdm

When using SW decryption, the mfpmp process would be used by the media
foundation for decyption. However, on Windows 10, the mfpmp process
would remain alive even if all media foundation related process has been
clear. We've confirmed this issue with Microsoft, they said the issue is
caused by internal cycle reference in the media foundation, and the
solution only exists on Windows 11 and they have no plan to backport it
to Windows 10.

In order to avoid this issue, we will only allow HW decryption on
Windows 10 via the media foudation.

This patch does two things,

(1) only return the HWDRM capabilities
This allows we compare the correct codec types, encyption schemes,
session types with the request candidates.

(2) force to use hardware robustness when initializing a CDM
After ensuring the candidate's request is supported, we would internally
use hardware robustness to create a HWCDM to avoid the problem.

Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3cd293e8be73 only provide hw decryption on Windows 10. r=jolin
Status: NEW → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: