Bug 1851070 - only provide hw decryption on Windows 10. r=jolin

When using SW decryption, the mfpmp process would be used by the media
foundation for decyption. However, on Windows 10, the mfpmp process
would remain alive even if all media foundation related classes has been
clear. We've confirmed this issue with Microsoft, they said the issue is
caused by internal cycle reference in the media foundation, and the
solution only exists on Windows 11 and they have no plan to backport it
to Windows 10.

In order to avoid this issue, we will only allow HW decryption on
Windows 10 via the media foudation.

This patch does two things,

(1) only return the HWDRM capabilities
This allows we compare the correct codec types, encyption schemes,
session types with the request candidates.

(2) force to use hardware robustness when initializing a CDM
After ensuring the candidate's request is supported, we would internally
use hardware robustness to create a HWCDM to avoid the problem.

Differential Revision: https://phabricator.services.mozilla.com/D192403